--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "three": "^0.145.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^16.11.56",
+    "@types/three": "^0.144.0",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/eslint-config-typescript": "^11.0.0",
@@ -26,6 +28,7 @@
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vite-plugin-rewrite-all": "^1.0.0",
-    "vue-tsc": "^0.40.7"
+    "vue-tsc": "^0.40.7",
+    "webpack-glsl-loader": "^1.0.1"
   }
 }
